fix: prevent back link flickering

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -953,7 +953,7 @@ section:not(:last-child) {
   align-items: center;
   justify-content: center;
   background-color: var(--dark-gray) transparent;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 50px;
   transition: background-color .6s ease;
 }
@@ -963,8 +963,6 @@ section:not(:last-child) {
   line-height: 1;
   color: white;
   flex-shrink: 0;
-  width: 32px;
-  height: 32px;
 }
 
 .back-link svg {
